# git-nexus

./: .git-nexus.toml  .gitattributes  CONTRIBUTING.md  Cargo.toml  DEV_TO_SUBMISSION.md  LICENSE  Makefile  README.md  install.bat  install.ps1  install.sh  uninstall.bat  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
src/: cache.rs  config.rs  errors.rs  export.rs  github.rs  health.rs  hooks.rs  ignore.rs  interactive.rs  main.rs  notifications.rs  parallel.rs  resolution.rs  stats.rs  suggestions.rs  themes.rs  tui.rs  watch.rs
tests/: integration_tests.rs
