[package]
name = "git-nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
git2 = { version = "0.20.4", default-features = false }
walkdir = "2.5.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"
notify = "7.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
